--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=lesson3.2_swagger
+spring.datasource.url=jdbc:postgresql://localhost:5432/myDb
+spring.datasource.username=myUser
+spring.datasource.password=postgre16
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
