--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username=myUser
 spring.datasource.password=postgre16
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 path.to.avatars.folder= ./avatars
