--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=lesson3.2_swagger
+server.port = 8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/myDb
 spring.datasource.username=myUser
 spring.datasource.password=postgre16
@@ -7,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 path.to.avatars.folder= ./avatars
+
+logging.level.Swagger.lesson3.__swagger.service=DEBUG
+
